# gtest_scratchpad

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/: mapreducer.h  num.h
src/: num.cpp
test/: mapreduce_unittests.cpp  testmain.cpp
test/integration/: mapreduce_mocknum_integration.cpp  mocknum.h
tests/: num_unittests.cpp
